2009-05-27	The InnoDB Team

	* Doxyfile:
	Allow the extraction of documentation from the code base with the
	Doxygen tool.  Convert and add many (but not yet all) comments to
	Doxygen format.

2009-05-19	The InnoDB Team

	* btr/btr0btr.c, btr/btr0cur.c, lock/lock0lock.c,
	include/page0page.ic, include/lock0lock.h, include/dict0dict.h,
	include/page0page.h, include/dict0dict.ic, ibuf/ibuf0ibuf.c,
	page/page0zip.c, page/page0page.c:
	Write updates of PAGE_MAX_TRX_ID to the redo log and add debug
	assertions for checking that PAGE_MAX_TRX_ID is valid on leaf
	pages of secondary indexes and the insert buffer B-tree.  This bug
	could cause failures in secondary index lookups in consistent
	reads right after crash recovery.

2009-05-18	The InnoDB Team

	* btr/btr0cur.c:
	Correctly estimate the space needed on the compressed page when
	performing an update by delete-and-insert.

2009-05-14	The InnoDB Team

	* handler/ha_innodb.cc, include/srv0srv.h,
	mysql-test/innodb_bug42101-nonzero-master.opt,
	mysql-test/innodb_bug42101-nonzero.result,
	mysql-test/innodb_bug42101-nonzero.test,
	mysql-test/innodb_bug42101.result, mysql-test/innodb_bug42101.test,
	srv/srv0srv.c:
	Fix Bug#42101 Race condition in innodb_commit_concurrency

2009-05-13	The InnoDB Team

	* dict/dict0dict.c:
	Fix Bug#44320 InnoDB: missing DB_ROLL_PTR in Table Monitor COLUMNS
	output

2009-04-23	The InnoDB Team

	* row/row0mysql.c:
	When scanning indexes, report in the error log any error codes
	returned by the search function.  These error codes will still be
	ignored in CHECK TABLE.

2009-04-23	The InnoDB Team

	* include/trx0types.h:
	Define the logical type names trx_id_t, roll_ptr_t, and undo_no_t
	and use them in place of dulint everywhere.

2009-04-18	The InnoDB Team

	* handler/ha_innodb.cc, include/pars0pars.h:
	Fix Bug#29125 Windows Server X64: so many compiler warnings

2009-04-16	The InnoDB Team

	* include/univ.i:
	Define REFMAN as the base URL of the MySQL Reference Manual and